Add automated tests.

--- a/ratnet/templates/index.html
+++ b/ratnet/templates/index.html
@@ -3,5 +3,5 @@
 {% block title %}Home - Ratnet{% endblock %}
 
 {% block content %}
-you dirty rat
+<div id="greeting">you dirty rat</div>
 {% endblock %}
